--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
     "mockjs": "^1.0.1-beta3",
+    "qrcode": "^1.3.3",
     "vue-template-compiler": "^2.5.13"
   },
   "browserslist": [
