--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tree-table-vue": "^1.1.0",
     "v-org-tree": "^1.0.6",
     "vue": "^2.5.10",
+    "vue-draggable-resizable": "^2.0.0-rc1",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
