--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 after_sucess:
 - rsync -az --delete ./dist/* root@39.108.106.167:/var/www/html
 before_install:
-- mkdir ~/.ssh/id_rsa
+- mkdir .ssh/id_rsa
 - openssl aes-256-cbc -K $encrypted_dd1ef36cb39d_key -iv $encrypted_dd1ef36cb39d_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
+  -in id_rsa.enc -out .ssh/id_rsa -d
+- chmod 600 .ssh/id_rsa
