--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ intsall:
 script:
 - npm run build
 after_sucess:
-  - chmod 600 ~/.ssh/id_rsa
   - rsync -az --delete ./dist/* root@39.108.106.167:/var/www/html
 before_install:
 - openssl aes-256-cbc -K $encrypted_dd1ef36cb39d_key -iv $encrypted_dd1ef36cb39d_iv
-  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+- chmod 600 ~/.ssh/id_rsa
