--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ intsall:
 - npm install
 script:
 - npm run build
-after_sucess:
+after_script:
 - rsync -az --delete ./dist/* root@39.108.106.167:/var/www/html
 before_install:
 - openssl aes-256-cbc -K $encrypted_dd1ef36cb39d_key -iv $encrypted_dd1ef36cb39d_iv
