--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-draggable-resizable": "^2.0.0-rc1",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.1",
+    "vue-worker": "^1.2.1",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
