--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tree-table-vue": "^1.1.0",
     "v-org-tree": "^1.0.6",
     "vue": "^2.5.10",
+    "vue-context": "^3.4.0",
     "vue-draggable-resizable": "^2.0.0-rc1",
     "vue-i18n": "^7.8.0",
     "vue-router": "^3.0.1",
