--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "iview-area": "^1.5.17",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "json2csv": "^4.5.0",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "tree-table-vue": "^1.1.0",
